# Silverchip-Home-Booking-System

./: .replit  .travis.yml  README.md  admin.db  database.db  main.py  management.py  management_exceptions.py  management_formatters.py  pyproject.toml  requirements.txt  storage.py  test_main.py  test_management.py  test_management_exceptions.py  test_storage.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-cov.yml  main.yml  python-app.yml
App/: main.py  management.py  storage.py
